# pbSEC

./: .gitignore  01_run_single_pbSEC.py  02_run_kinetic_rounds.py  02_run_n_kinetic_rounds.py  03_plot_kinetic_rounds_simulation.py  03_run_kinetic_rounds_until_undetectable.py  04_plot_discarding_kinetic_rounds.py  04_plot_pbSEC_pKD_vs_complex.py  04_plot_pbSEC_pKD_vs_logcomplex.py  05_plot_pbSEC_recovery_vs_logcomplex copy.py  05_plot_pbSEC_recovery_vs_logcomplex.py  06_plot_pbSEC_pKD_vs_num_rounds_detectable.py  07_plot_pbSEC_3D_pKD_vs_logcomplex_vs_recovery_efficiency.py  README.md  high_accuracy_binding_equations.py  pbSEC-simulator.xlsm  pbSEC_equations.py  pbSEC_notebook.ipynb  pyproject.toml
MassFinder/: README.md  buildpicker.bash  massfinder.py  pickerppm.cpp
src/pbsec/: __init__.py  pbSEC.py
